--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,21 @@
     flex-shrink: none;
   }
 
+  .fade-in {
+        animation-name: fadeInOpacity;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in;
+        animation-duration: 0.5s;
+    }
+    @keyframes fadeInOpacity {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
   </style>
 </head>
 <body>
